# Labs-OOP

./: README.md  functions.cpp  main.cpp  test.cpp
lab1/: .gitignore  CMakeLists.txt  functions.h
